# monopoly-junior-sim

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  simulation.ipynb
src/: sim.py
src/monopoly/: __init__.py  board.py  cards.py  constants.py  game.py  models.py  player.py  spaces.py
